--- a/cli-nix.cabal
+++ b/cli-nix.cabal
@@ -27,6 +27,7 @@ library
     , logging-effect  >=1.3.4   && <1.4
     , mtl             >=2.2.2   && <2.3
     , text            >=1.2.3.1 && <1.3
+    , which           >=0.2     && <0.3
   ghc-options: -Wall
 
 source-repository head
