--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -1,6 +1,6 @@
 name: github-action
 
-on: [push, pull_request] 
+on: [push, pull_request]
 
 jobs:
   build:
@@ -32,7 +32,9 @@ jobs:
       run: |
         cabal update
         cabal build --only-dependencies --enable-tests --enable-benchmarks
+        touch nix-prefetch-git
+        chmod 755 nix-prefetch-git
     - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
+      run: env PATH=.:$PATH cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
-      run: cabal test all
+      run: env PATH=.:$PATH cabal test all
