Need local path for docs too

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -46,4 +46,4 @@ jobs:
       run: env PATH=.:$PATH cabal test --enable-tests all
 
     - name: Build Docs
-      run: cabal haddock
+      run: env PATH=.:$PATH cabal haddock
